# multisig-near-wallet

./: package-lock.json  package.json
contract/: Cargo.toml
contract/src/: lib.rs
